--- a/_includes/header.html
+++ b/_includes/header.html
@@ -20,7 +20,7 @@
           <nav class="cover-navigation cover-navigation--primary">
             <ul class="navigation">
               <li class="navigation__item"><a href="{{ site.baseurl }}#blog" title="link to {{ site.title }} blog" class="blog-button">Blog</a></li>
-              <li class="navigation__item"><a href="{{ site.baseurl }}bio" title="link to {{ site.title }} contact" class="contact-button">Contact</a></li>
+              <li class="navigation__item"><a href="{{ site.baseurl }}bio" title="link to {{ site.title }} contact" class="contact-button">Bio/Contact</a></li>
             </ul>
           </nav>
         </div>
