--- a/_includes/head.html
+++ b/_includes/head.html
@@ -13,8 +13,19 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
   <meta name="twitter:card" content="summary">
+  {% if page.title %}
+  <meta name="twitter:title" content="{{ page.title }}">
+  {% else %}
   <meta name="twitter:title" content="{{ site.title }}">
+  {% endif %}
+  {% if page.twitter_excerpt %}
+  <meta name="twitter:description" content="{{ page.twitter_excerpt }}">
+  {% else if page.excerpt %}
+  <meta name="twitter:description" content="{{ page.excerpt }}">
+  {% else %}
   <meta name="twitter:description" content="{{ site.description }}">
+  {% endif %}
+  <meta name="twitter:site" content="@{{ site.author.twitter_username }}">
 
   <meta property="og:type" content="article">
   <meta property="og:title" content="{{ site.title }}">
