--- a/assets/css/home.scss
+++ b/assets/css/home.scss
@@ -33,6 +33,10 @@
     font-size: 1.4rem;
     margin: 0;
   }
+  img {
+    height: 100px;
+    margin-top: .6rem;
+  }
   i.far { /* fontawesome icons */
     font-size: 86%;
   }
