Redirection to cristpy-engineering

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -8,7 +8,7 @@
 
 <head>
   {% if page.redirecturl %}
-    <meta http-equiv="refresh" content="0; url={{ post.redirecturl }}" />
+    <meta http-equiv="refresh" content="0; url={{ page.redirecturl }}" />
   {% endif %}
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
